[package]
name = "feedback"
version = "0.1.0"
edition = "2021"

[lib]
name = "feedback"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23.4", features = ["extension-module"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["net"] }
tracing = "0.1.40"

[build-dependencies]
pyo3-build-config = "0.23.4"
