[package]
name = "feedback"
version = "0.3.1"
edition = "2021"

[lib]
name = "feedback"
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = "1.21.0"
futures-lite = "2.6.0"
pyo3 = { version = "0.23.4", features = ["extension-module"], optional = true }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["net"] }
tracing = "0.1.40"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["macros", "net", "rt", "time"] }
tracing-subscriber = "0.3.19"

[build-dependencies]
pyo3-build-config = { version = "0.23.4", optional = true }

[features]
default = []
# default = ["python"]
python = ["pyo3", "pyo3-build-config"]
